fixed dependent index shift

--- a/styles/stylesGraph.css
+++ b/styles/stylesGraph.css
@@ -34,6 +34,7 @@
 
 .graphsBox { 
   width: 80%;
+  left: 50%;
 }
 
 #boxTopMap {
@@ -48,8 +49,7 @@
   bottom: 0;
   left: 20%;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.30) 3px 2.2px 2.9px;
-  overflow:auto;
+  box-shadow: rgba(0, 0, 0, 0.30) -3px -2.2px 2.9px;
   border: 1px solid black;
 }
 #noGraphContainer{
