--- a/styles/stylesMap.css
+++ b/styles/stylesMap.css
@@ -39,7 +39,7 @@
 
 /*Tip for mapBox*/
 #tip-container {
-  z-index: 500;
+  z-index: 1500;
   display: none;
 	width: 40px;
 	height: 20px;
@@ -47,7 +47,7 @@
   top:20%;
   bottom: 0;
   left: 20%;
-	margin-top: -1px;
+	margin-top: -2.4px;
 	margin-left: -20px;
   overflow:auto;
 	pointer-events: none;
@@ -64,10 +64,10 @@
 	   -moz-transform: rotate(45deg);
 	    -ms-transform: rotate(45deg);
 	        transform: rotate(45deg);
-}
-#popup-tip {
+
 	background: snow;
 	color: #333;
-	box-shadow: 0 3px 3px rgba(0,0,0,0.4);
+  border: 1px solid black;
+  box-shadow: rgba(0, 0, 0, 0.30) -3px -2.2px 2.9px;
 }
 /*End of tip for mapBox*/
